RESOLVED FIXED301200
ModelPlayerClient cannot be `ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr`
https://bugs.webkit.org/show_bug.cgi?id=301200
Summary ModelPlayerClient cannot be `ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr`
Sam Weinig
Reported 2025-10-21 11:08:49 PDT
In 301613@main, ModelPlayerClient was made conditionally `ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr`, rather than `AbstractRefCountedAndCanMakeWeakPtr`. This won't work as HTMLModelElement inherits from ModelPlayerClient and it is already `RefCounted`.
Attachments
Mike Wyrzykowski
Comment 1 2025-10-21 11:17:26 PDT
Which type is in conflict? Conditionally ModelPlayerType is now `ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr`. Which is the non-thread safe RefCounted type that HTMLModelElement inherits from?
Radar WebKit Bug Importer
Comment 2 2025-10-21 11:23:12 PDT
Mike Wyrzykowski
Comment 3 2025-10-21 11:23:38 PDT
actually this doesn't need to be thread safe ref counted, it can be a non-thread safe pointer
Sam Weinig
Comment 4 2025-10-21 11:28:21 PDT
Glad its not needed, but for completeness, HTMLModelElement inherits from HTMLElement, and all of the DOM is main thread only.
Sam Weinig
Comment 5 2025-10-21 11:30:30 PDT
In WebCore/WebKit, "client" interfaces either need to not be ref counted at all, or be `AbstractRefCounted`, so that they can delegate their reference counting to type that implements them.
Mike Wyrzykowski
Comment 6 2025-10-21 11:41:27 PDT
EWS
Comment 7 2025-10-21 14:21:21 PDT
Committed 301904@main (7d9a3479678b): <https://commits.webkit.org/301904@main> Reviewed commits have been landed. Closing PR #52749 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.