ModelPlayerClient cannot be `ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr` https://bugs.webkit.org/show_bug.cgi?id=301200 rdar://163130598

Reviewed by Sam Weinig.

All accesses of m_client occur on the main thread, see
DDModelPlayer::ensureOnMainThreadWithProtectedThis

So this doesn't need to be a ThreadSafeWeakPtr, it can be
a WeakPtr

* Source/WebCore/Modules/model-element/DDModelPlayer.h:
* Source/WebCore/Modules/model-element/ModelPlayerClient.h:
* Source/WebCore/Modules/model-element/dummy/DummyModelPlayer.h:

Canonical link: https://commits.webkit.org/301904@main