Source/WebCore/Modules/model-element/ModelPlayerClient.h
@@ -39,11 +39,7 @@ class HTMLModelElement;
 class ModelPlayer;
 class ResourceError;
 
-#if ENABLE(GPU_PROCESS_MODEL)
-class WEBCORE_EXPORT ModelPlayerClient : public ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<ModelPlayerClient> {
-#else
 class WEBCORE_EXPORT ModelPlayerClient : public AbstractRefCountedAndCanMakeWeakPtr<ModelPlayerClient> {
-#endif
 public:
     virtual ~ModelPlayerClient();
 
